fix(styles): add column-gap lg-down in OpenPositions for Jobs page

--- a/src/components/pages/jobs/content/open-positions/open-positions.module.scss
+++ b/src/components/pages/jobs/content/open-positions/open-positions.module.scss
@@ -41,6 +41,10 @@
 
   @include with-link-secondary;
 
+  @include lg-down {
+    column-gap: 60px;
+  }
+
   @include md-down {
     grid-template-columns: repeat(1, 1fr);
   }
